--- a/accounts/templates/accounts/user_birthday.html
+++ b/accounts/templates/accounts/user_birthday.html
@@ -1,7 +1,6 @@
 {% extends "base.html" %}
-{% load thumbnail %}
+{% load easy_thumbnails %}
 {% load markdown_deux_tags %}
-{% load mediawiki_links %}
 {% load static %}
 
 {% block title %}Bursdag{% endblock %}
