--- a/com/templates/com/com_details.html
+++ b/com/templates/com/com_details.html
@@ -1,9 +1,8 @@
 {% extends "base.html" %}
 {% load mediawiki_links %}
 {% load markdown_deux_tags %}
-{% load thumbnail %}
+{% load easy_thumbnails %}
 {% load sekizai_tags %}
-{% load static %}
 
 {% block title %}{{ com.com.name }}{% endblock %}
 
