--- a/interactive/templates/interactive/advent_admin.html
+++ b/interactive/templates/interactive/advent_admin.html
@@ -1,5 +1,5 @@
 {% extends "interactive/advent_base.html" %}
-{% load thumbnail %}
+{% load easy_thumbnails %}
 {% load sekizai_tags %}
 {% load static %}
 
@@ -59,3 +59,4 @@
 </div>
 
 {% endblock %}
+
