--- a/interactive/templates/interactive/advent_base.html
+++ b/interactive/templates/interactive/advent_base.html
@@ -1,6 +1,4 @@
-{% load mediawiki_links listutil %}
-{% load markdown_deux_tags %}
-{% load thumbnail %}
+{% load listutil %}
 {% load sekizai_tags %}
 {% load bootstrap3 %}
 {% load static %}
