--- a/meeting_records/templates/meeting_records/meeting_record_detail.html
+++ b/meeting_records/templates/meeting_records/meeting_record_detail.html
@@ -3,7 +3,7 @@
 {% load humanize %}
 {% load comments %}
 {% load mediawiki_links %}
-{% load thumbnail %}
+{% load easy_thumbnails %}
 
 {% block morehead %}
 
