--- a/nabladet/templates/nabladet/nablad_list.html
+++ b/nabladet/templates/nabladet/nablad_list.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% load thumbnail %}
+{% load easy_thumbnails %}
 
 {% block title %}Nabladet{% endblock %}
 
@@ -37,3 +37,4 @@
 {% include "includes/pagination.html" %}
 
 {% endblock main %}
+
