--- a/podcast/templates/podcast/season.html
+++ b/podcast/templates/podcast/season.html
@@ -1,8 +1,7 @@
 {% extends "base.html" %}
-{% load markdown_deux_tags %}
 {% load sekizai_tags %}
 {% load static %}
-{% load thumbnail %}
+{% load easy_thumbnails %}
 
 {% block title %}Skråttcast{% endblock %}
 {% block content %}
