--- a/templates/comments/list.html
+++ b/templates/comments/list.html
@@ -1,9 +1,8 @@
 {% load humanize %}
-{% load thumbnail %}
+{% load easy_thumbnails %}
 {% load markdown_deux_tags %}
 {% load mediawiki_links %}
 {% load static %}
-{% load firstof from future %}
 
 {% for comment in comment_list %}
 
