--- a/templates/flatpages/bn.html
+++ b/templates/flatpages/bn.html
@@ -2,7 +2,7 @@
 {% load mediawiki_links %}
 {% load markdown_deux_tags %}
 {% load flatpages %}
-{% load thumbnail %}
+{% load easy_thumbnails %}
 {% load static %}
 
 {% block title %}
