--- a/templates/front_page.html
+++ b/templates/front_page.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load markdown %}
 {% load listutil %}
-{% load thumbnail %}
+{% load easy_thumbnails %}
 {% block more_head %}
 <link rel="alternate" type="application/rss+xml" href="/feed/" title="RSS feed">
 {% endblock %}
