--- a/accounts/templates/accounts/includes/user_large.html
+++ b/accounts/templates/accounts/includes/user_large.html
@@ -1,4 +1,4 @@
-{% load thumbnail %}
+{% load easy_thumbnails %}
 {% load static %}
 <div>
     <h2>{% firstof user.get_full_name user.username %}</h2>
@@ -11,3 +11,4 @@
                         {% endif %} title="{% firstof user.get_full_name user.username %}">
     </a>
 </div>
+
