--- a/accounts/templates/accounts/view_member_profile.html
+++ b/accounts/templates/accounts/view_member_profile.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% load thumbnail %}
+{% load easy_thumbnails %}
 {% load markdown_deux_tags %}
 {% load mediawiki_links %}
 {% load static %}
