--- a/jobs/templates/jobs/jobs_summary_include.html
+++ b/jobs/templates/jobs/jobs_summary_include.html
@@ -1,8 +1,7 @@
-{% load mediawiki_links %}
 {% load markdown_deux_tags %}
 {% load humanize %}
 {% load jobs_filters %}
-{% load thumbnail %}
+{% load easy_thumbnails %}
 
 <div class="col-md-6 news_item advert">
     {% if job.company.picture %}
