--- a/templates/search/search.html
+++ b/templates/search/search.html
@@ -1,7 +1,5 @@
 {% extends 'base.html' %}
-{% load highlight %}
-{% load static %}
-{% load thumbnail %}
+{% load easy_thumbnails %}
 
 {% block content %}
 
