Legger tilbake load static etter at det forsvant i bae13c83
Jeg gikk litt bananas med fjerning av ubrukte templatetagbiblioteker
i bae13c83 og derfor forsvant mer enn det skulle. Jeg fikset det
midlertidig direkte på produksjon, men glemte å committe det. Så her
kommer det.

--- a/com/templates/com/com_details.html
+++ b/com/templates/com/com_details.html
@@ -3,6 +3,7 @@
 {% load markdown_deux_tags %}
 {% load easy_thumbnails %}
 {% load sekizai_tags %}
+{% load static %}
 
 {% block title %}{{ com.com.name }}{% endblock %}
 
