--- a/content/templates/content/events/event_list.html
+++ b/content/templates/content/events/event_list.html
@@ -47,17 +47,17 @@
             <h2>Påmeldinger</h2>
             <table class="table table-bordered table-striped">
 
-            {% for reg in future_attending_events %}
+            {% for event in future_attending_events %}
                 <tr>
                     <td>
-                        <a href="{{ reg.event.get_absolute_url }}">{{ reg.event.headline }}</a>
+                        <a href="{{ event.get_absolute_url }}">{{ event.headline }}</a>
                     </td>
                     <td>
-                        {% if reg.waiting %}
+                        {% if event.waiting %}
                             På venteliste
                         {% endif %}
 
-                        {% if reg.attending %}
+                        {% if event.attending %}
                             <span class="glyphicon glyphicon-check"></span> Har plass
                         {% endif %}
                     </td>
