--- a/content/templates/content/includes/meta.html
+++ b/content/templates/content/includes/meta.html
@@ -20,8 +20,8 @@
     <tr>
         <td>Av</td>
         <td>
-            <a href="{% url "member_profile" content.created_by.username %}">
-                {% if content.created_by.get_full_name %}{{ content.created_by.get_full_name }}{% else %}{{ content.created_by.username }}{% endif %}
+            <a href="{{ content.created_by.get_absolute_url }}">
+                {% firstof content.created_by.get_full_name content.created_by.username %}
             </a>
         </td>
     </tr>
@@ -44,8 +44,8 @@
     <tr>
         <td>Av</td>
         <td>
-            <a href="{% url "member_profile" content.last_changed_by.username %}">
-                {% if content.last_changed_by.get_full_name %}{{ content.last_changed_by.get_full_name }}{% else %}{{ content.last_changed_by.username }}{% endif %}
+            <a href="{{ content.last_changed_by.get_absolute_url }}">
+                {% firstof content.last_changed_by.get_full_name content.last_changed_by.username %}
             </a>
         </td>
     </tr>
