Fikser skrivefeil (univseriteter -> universiteter) ex_list.html edited online with Bitbucket

--- a/exchange/templates/exchange/ex_list.html
+++ b/exchange/templates/exchange/ex_list.html
@@ -8,7 +8,7 @@
         <input type="text" name="q" placeholder="" value="{{request.GET.q}}"/>
         <input type="submit" value="Søk"/>
     </form>
-    <p>Her finner du en liste over univseriteter hvor fysmattere har vært på utveksling:</p>
+    <p>Her finner du en liste over universiteter hvor fysmattere har vært på utveksling:</p>
     <table class="table">
         <thead>
         <tr>
