Kosmetiske forandringer + en databaseoptimalisering i exchange-appen
* PEP8 fiks
* Fikser modellene slik at de følger django-style-guiden
  https://docs.djangoproject.com/en/1.10/internals/contributing/writing-code/coding-style/#model-style
* Optimalisert utvekslingslista slik at den henter alle
  student-objektene på en gang i stedet for en ny spørring for hver
  student.

Ja, jeg vet at noen av disse stilfiksene er litt pedantiske, men PEP8 er
min religion. :P

--- a/exchange/templates/exchange/ex_detail_list.html
+++ b/exchange/templates/exchange/ex_detail_list.html
@@ -21,10 +21,10 @@
         <tbody>
         {% for obj in ex_detail_list %}
         <tr>
-            <td>{{obj.name}}</td>
+            <td>{{ obj.student.get_full_name }}</td>
             <td>{{obj.retning}}</td>
             {% if user.is_authenticated %}
-            <td>{{obj.mail}}</td>
+            <td>{{ obj.student.email }}</td>
             {% endif %}
             <td>{{obj.start|date:"F Y"}}</td>
             <td>{{obj.end|date:"F Y"}}</td>
@@ -45,4 +45,4 @@
 </div>
 
 
-{% endblock content%}
+{% endblock content %}
