--- a/exchange/templates/exchange/info.html
+++ b/exchange/templates/exchange/info.html
@@ -6,11 +6,14 @@
 <div class="container">
     {{ object.body|markdown }}
 
+    {% with univ=object.ex.univ %}
     <ul class="pager">
         <li class="previous">
             <a href="{% url 'ex_detail_list' univ.pk %}"><span aria-hidden="true">&larr;</span> Tilbake til {{ univ.univ_navn }}</a>
         </li>
     </ul>
+    {% endwith %}
+
 </div>
 
 {% endblock %}
