--- a/exchange/templates/exchange/ex_detail_list.html
+++ b/exchange/templates/exchange/ex_detail_list.html
@@ -6,33 +6,34 @@
     <h2>{{ object.univ_navn }}</h2>
     <p>{{ object.desc }}</p>
     <p>Liste over utvekslinger:</p>
-    <table class="table table-bordered">
-        <thead>
-        <tr>
-            <th>Navn</th>
-            <th>Retning</th>
-            {% if user.is_authenticated %}
-            <th>Epost</th>
-            {% endif %}
-            <th>Utveksling start</th>
-            <th>Slutt</th>
-        </tr>
-        </thead>
-        <tbody>
-        {% for obj in ex_detail_list %}
-        <tr>
-            <td>{{obj.name}}</td>
-            <td>{{obj.retning}}</td>
-            {% if user.is_authenticated %}
-            <td>{{obj.mail}}</td>
-            {% endif %}
-            <td>{{obj.start|date:"F Y"}}</td>
-            <td>{{obj.end|date:"F Y"}}</td>
-        </tr>
-        {% endfor %}
-        </tbody>
-    </table>
-
+    <div style="overflow: auto">
+        <table class="table table-bordered">
+            <thead>
+            <tr>
+                <th>Navn</th>
+                <th>Retning</th>
+                {% if user.is_authenticated %}
+                <th>Epost</th>
+                {% endif %}
+                <th>Utveksling start</th>
+                <th>Slutt</th>
+            </tr>
+            </thead>
+            <tbody>
+            {% for obj in ex_detail_list %}
+            <tr>
+                <td>{{obj.name}}</td>
+                <td>{{obj.retning}}</td>
+                {% if user.is_authenticated %}
+                <td>{{obj.mail}}</td>
+                {% endif %}
+                <td>{{obj.start|date:"F Y"}}</td>
+                <td>{{obj.end|date:"F Y"}}</td>
+            </tr>
+            {% endfor %}
+            </tbody>
+        </table>
+    </div>
     <h3>Relevante intervjuer og reisebrev:</h3>
 
     <ul style="list-style-type:disc">
