--- a/exchange/templates/exchange/ex_list.html
+++ b/exchange/templates/exchange/ex_list.html
@@ -9,23 +9,31 @@
         <input type="submit" value="Søk"/>
     </form>
     <p>Her finner du en liste over universiteter hvor fysmattere har vært på utveksling:</p>
-    <table class="table">
+    <div style="overflow: auto">
+        <table class="table">
         <thead>
         <tr>
-            <th>Universiteter</th>
+            <th>Universitet</th>
+            {% for retn in retninger %}
+            <th>{{ retn }}</th>
+            {% endfor %}
             <th>Land</th>
         </tr>
         </thead>
-    <tbody>
-    {% for obj in ex_list %}
-    <tr>
-        <td><a href="{% url 'ex_detail_list' obj.id %}">{{obj.univ_navn}}</a></td>
-        <td>{{obj.land}}</td>
-    </tr>
+        <tbody>
+        {% for obj in ex_list %}
+            <tr>
+                <td><a href="{% url 'ex_detail_list' obj.id %}">{{obj.univ_navn}}</a></td>
+                {% for retn in obj.retninger %}
+                    <td>{% if retn %}<span class="glyphicon glyphicon-ok"></span>{% endif %}</td>
+                {% endfor %}
+                <td>{{obj.land}}</td>
+            </tr>
+        {% endfor %}
+        </tbody>
+        </table>
+    </div>
 
-    {% endfor %}
-    </tbody>
-  </table>
 </div>
 
 
