--- a/exchange/templates/exchange/ex_detail_list.html
+++ b/exchange/templates/exchange/ex_detail_list.html
@@ -23,7 +23,7 @@
             {% for obj in ex_detail_list %}
             <tr>
                 <td>{{obj.student.get_full_name}}</td>
-                <td>{{obj.retning}}</td>
+                <td>{{obj.get_retning_display}}</td>
                 {% if user.is_authenticated %}
                 <td>{{obj.student.email}}</td>
                 {% endif %}
