--- a/content/templates/content/news/includes/text_content.html
+++ b/content/templates/content/news/includes/text_content.html
@@ -4,7 +4,7 @@
 
 <div class="box">
     {% if news.as_child_class.correct_picture %}
-    <img alt="header" class="img-responsive" src="{% thumbnail news.as_child_class.correct_picture 770x300 box=news.as_child_class.correct_cropping quality=95 %}">
+    <img alt="header" class="img-responsive" src="{% thumbnail news.as_child_class.correct_picture 760x300 box=news.as_child_class.correct_cropping upscale=True detail=True quality=95 %}">
     {% endif %}
 
     <header><h2>{{ news.headline }}</h2></header>
