--- a/accounts/templates/accounts/list.html
+++ b/accounts/templates/accounts/list.html
@@ -31,8 +31,8 @@
 
             <td class="cell_groups"> 
             {# Grupper brukeren er med i #}
-                {% for group in user.groups.all %}
-                <img alt="{{ group.name }}" title="{{ group.name }}" src="{{ STATIC_URL }}img/komite-ikon/{{ group.name|lower }}.png" />
+                {% for group in user.nablagroups %}
+                    <img alt="{{ group.name }}" title="{{ group.name }}" src="{{ group.logo.url }}" width="30" />
                 {% endfor %}
             </td>
 
