La til mer funksjonalitet og fikset views og templates

--- a/templates/nablashop/category_detail.html
+++ b/templates/nablashop/category_detail.html
@@ -30,3 +30,7 @@
 
 
 {% endblock %}
+
+{% block sidebar %}
+     {% include "nablashop/includes/category-sidebar.html" with category_list=categories %}
+{% endblock %}
