--- a/content/templates/content/blog_list.html
+++ b/content/templates/content/blog_list.html
@@ -2,37 +2,55 @@
 {% load markdown %}
 {% load static %}
 {% load thumbnail %}
+{% load sekizai_tags %}
 {% block title %}Blogger{% endblock %}
 
 
 {% block content %}
-<link rel="stylesheet" type="text/css" href="{% static "blog/blog.css" %}">
+    {% addtoblock "css" %}
+        <link href="{% static "blog/blog.css" %}" rel="stylesheet"/>
+    {% endaddtoblock %}
 <div class="">
-    <h1>Blogg</h1>
+    <h1>Nyeste blogginnlegg</h1>
 
     <div class="list-group">
 
         {% for post in post_list %}
             <div class="list-group-item row">
-            <div class="col-lg-7">
-                <a href="{{ post.get_absolute_url }}">
-                <h2>{{ post.title }}</h2>
-                </a>
-                <p>
-                    {{ post.content|markdown:"unsafe"|truncatechars_html:250}}
-                </p>
-            </div>
-            <div class="col-lg-5">
+                <div class="row">
+                    <div class="col-md-8">
+                        <a href="{{ post.get_absolute_url }}">
+                        <h2>{{ post.title }}</h2>
+                        </a>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="blog-move-right">{{ post.blog.name }}</div>
+                        <br>
+                        <i class="blog-move-right">Publisert {{ post.created_date|date:"d.m.y"}}</i>
+                    </div>
+                </div>
+
                 {% if post.list_image %}
-                    <img src="{% thumbnail post.list_image 300x200 %}" class="rounded align-bottom" />
+                    <div class="col-lg-7">
+                {% else %}
+                    <div class="col-lg-12">
                 {% endif %}
-            </div>
+                        <p>
+                            {{ post.content|markdown:"unsafe"|truncatechars_html:300}}
+                        </p>
+                    </div>
+                <div class="col-lg-5">
+                    {% if post.list_image %}
+                        <img src="{% thumbnail post.list_image 300x200 %}" class="rounded align-bottom" />
+                    {% endif %}
+                </div>
             </div>
             {% empty %}
             Ingen posts her enda.
         {% endfor %}
     </div>
 </div>
+
 {% endblock content %}
 
 {% block sidebar %}
