--- a/content/templates/content/blog_list.html
+++ b/content/templates/content/blog_list.html
@@ -41,7 +41,7 @@
                     </div>
                 <div class="col-lg-5">
                     {% if post.list_image %}
-                        <img src="{% thumbnail post.list_image 300x200 %}" class="rounded align-bottom" />
+                        <img src="{% thumbnail post.list_image 300x200 %}" class="rounded align-bottom blog-floating-image" />
                     {% endif %}
                 </div>
             </div>
