--- a/templates/nablashop/index.html
+++ b/templates/nablashop/index.html
@@ -1,22 +1,20 @@
 {% extends "base.html" %}
 {% load listutil %}
-{% load thumbnail %}
+{% load easy_thumbnails %}
 {% block content %}
     <h1>Nablashop</h1>
 {% if product_list %}
     <h2>Produkter</h2>
     <div class="row">
         {% for product in product_list %}
-            <div class="col-xs-6 col-md-3">
+            <div class="col-xs-6 col-md-4">
                 <div class="thumbnail">
                     <a href="{% url 'nablashop:product_detail' product.id %}">
-                        <img class="img-responsive" src="{{ product.photo.url }}">
+                        <img class="img-responsive"  src="{% thumbnail product.photo 225x225 crop %}">
                     </a>
                     <div class="caption">
-                        <table class="table-condensed">
-                            <td>{{ product.name }}</td>
-                            <td>{{ product.price }} kr</td>
-                        </table>
+                        <p>{{ product.name }}</p>
+                        <p>{{ product.price }} kr</p>
                         <p>{{ product.description_short }}</p>
                         <p><a href="{% url 'nablashop:product_detail' product.id %}" class="btn btn-primary center-block"
                               role="button">Les mer</a>
