--- a/templates/includes/article_widget.html
+++ b/templates/includes/article_widget.html
@@ -3,11 +3,11 @@
     <div class="box {{ news.content_type.model }}">
     {% if news.as_child_class.correct_cropping and news.as_child_class.correct_picture %}
         <a href="{{ news.get_absolute_url }}">
-            <img alt="" class="news-picture" src="{% thumbnail news.as_child_class.correct_picture 360x200 box=news.as_child_class.correct_cropping upscale quality=95 detail %}">
+            <img alt="" class="news-picture img-responsive" src="{% thumbnail news.as_child_class.correct_picture 360x200 box=news.as_child_class.correct_cropping upscale quality=95 detail %}">
         </a>
     {% elif news.as_child_class.correct_picture %}
         <a href="{{ news.get_absolute_url }}">
-            <img alt="" class="news-picture" src="{% thumbnail news.as_child_class.correct_picture 360x200 quality=95 upscale crop="smart" detail %}">
+            <img alt="" class="news-picture img-responsive" src="{% thumbnail news.as_child_class.correct_picture 360x200 quality=95 upscale crop="smart" detail %}">
         </a>
     {% endif %}
     <header>
