Endret storrelse til detaljbilde'

--- a/templates/nablashop/product_detail.html
+++ b/templates/nablashop/product_detail.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <img class="img" src="{{ product.photo.url }}"></p>
+    <img class="img" style="width:50%"src="{{ product.photo.url }}"></p>
     <h1>{{ product.name }} - {{ product.price }} kr</h1>
     <p>{{ product.description }}</p>
 
