--- a/interactive/templates/interactive/advent_door_base.html
+++ b/interactive/templates/interactive/advent_door_base.html
@@ -19,6 +19,9 @@
     {% if door.quiz %}
     <p><a href="{{ door.quiz.get_absolute_url }}" class="btn btn-large btn-wide btn-primary">Gå til quiz!</a></p>
     {% endif %}
+    {% if door.user_test %}
+    <p><a href="{{ door.user_test.get_absolute_url }}" class="btn btn-large btn-wide btn-primary">Gå til brukertest!</a></p>
+    {% endif %}
     {% if door.is_lottery %}
     {% if door.winner %}
         <h1>Gratulerer med seieren!</h1>
