Kalender klar til kunngjøring

--- a/interactive/templates/interactive/advent_admin.html
+++ b/interactive/templates/interactive/advent_admin.html
@@ -1,4 +1,4 @@
-{% extends "interactive/advent_base.html" %}
+{% extends base_template %}
 {% load easy_thumbnails %}
 {% load sekizai_tags %}
 {% load static %}
