--- a/interactive/templates/interactive/advent_base_2016.html
+++ b/interactive/templates/interactive/advent_base_2016.html
@@ -99,7 +99,7 @@
 
 {% if door %}
 <div class="col-md-2 corner-right">
-<a href="{{ calendar.get_absolute_url }}"><span class="glyphicon glyphicon-share-alt"></span></a>
+<a href="{{ calendar.get_absolute_url }}"><span class="glyphicon glyphicon-share-alt" style="color: rgb(154,16,39)"></span></a>
 </div>
 {% endif %}
 </div>
