--- a/interactive/templates/interactive/user_test_result.html
+++ b/interactive/templates/interactive/user_test_result.html
@@ -5,7 +5,8 @@
 {% block content %}
 
 <h1>{{ title }}</h1>
-
-<p>{{ content }}</p>
+<div class="text">
+    <p>{{ content }}</p>
+</div>
 
 {% endblock %}
