--- a/interactive/templates/interactive/quiz.html
+++ b/interactive/templates/interactive/quiz.html
@@ -5,7 +5,7 @@
 {% block content %}
 
 
-<h1>{{ quiz.title }}</h1>
+<h1>{{ quiz.title }}{% if quiz.is_published %}{% else %} (Ikke publisert){% endif %}</h1>
 {% if quiz.is_timed %}
 <div class="float-left well">
     <h2>Tid igjen</h2>
@@ -24,7 +24,7 @@ jQuery(function ($) {
 <form action="{{ view.get_form_url }}" method="post">
     {% csrf_token %}
 {% for question in quiz.questions.all %}
-    <h2>{{ forloop.counter }}. {{ question.question }}</h2>
+    <h2 class="quiz-question">{{ forloop.counter }}. {{ question.question | safe}}</h2>
     <ul class="list-group">
         <li class="list-group-item">
             <label>{{ question.alternative_1 }}</label>
