--- a/interactive/templates/interactive/quiz.html
+++ b/interactive/templates/interactive/quiz.html
@@ -5,7 +5,7 @@
 {% block content %}
 
 
-<h1>{{ quiz.title }}{% if quiz.is_published %}{% else %} (Ikke publisert){% endif %}</h1>
+<h1>{{ quiz.title }}{% if not quiz.is_published %} (Ikke publisert){% endif %}</h1>
 {% if quiz.is_timed %}
 <div class="float-left well">
     <h2>Tid igjen</h2>
