Tulla. Men denne

--- a/interactive/templates/interactive/advent_base_2016.html
+++ b/interactive/templates/interactive/advent_base_2016.html
@@ -82,7 +82,7 @@
 
                 <a href="{{ door.get_absolute_url }}">
                     <img src="{% cycle "/media/advent/tree.ico" "/media/advent/snowman.png" "/media/advent/lue.png" "/media/advent/fjosnisse.png" "/media/advent/reindeer.png" "/media/advent/gift.png" "/media/advent/bells.png"%}" />
-                <p>
+                <p class="door-desc">
                     {{ door.short_description }}
                 </p>
                 </a>
