--- a/interactive/static/interactive/css/advent_calendar_2016.css
+++ b/interactive/static/interactive/css/advent_calendar_2016.css
@@ -80,6 +80,7 @@ h1 {
     position: relative;
     font-family: 'Script MT', Arial, sans-serif;
     color: rgb(154,16,39);
+    cursor: pointer;
 }
 
 .advent-door-open .advent-number {
