Fikser Facebook-linker

--- a/interactive/templates/interactive/advent_base_2016.html
+++ b/interactive/templates/interactive/advent_base_2016.html
@@ -18,7 +18,7 @@
                    fysikk og matematikk-masterprogrammet på NTNU.">
     <meta name="author" content="Nabla">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <meta property="og:image" content="/media/jul_2016_meta.jpg">
 
     {% addtoblock "css" %}
         <link rel="stylesheet" href="{% static "bootstrap/dist/css/bootstrap.min.css" %}"/>
