--- a/templates/nablashop/category_detail.html
+++ b/templates/nablashop/category_detail.html
@@ -1,20 +1,19 @@
 {% extends "base.html" %}
+{% load easy_thumbnails %}
 
 {% block content %}
     <h1>{{ category.name }}</h1>
     <h2>{{ category.description }}</h2>
     <div class="row">
         {% for product in category.product_set.all %}
-            <div class="col-xs-6 col-md-3">
+            <div class="col-xs-6 col-md-6">
                 <div class="thumbnail">
                     <a href="{% url 'nablashop:product_detail' product.id %}">
-                        <img class="img-responsive" src="{{ product.photo.url }}">
+                        <img class="img-responsive" src="{% thumbnail product.photo 350x350 crop %}">
                     </a>
                     <div class="caption">
-                        <table class="table-condensed">
-                            <td>{{ product.name }}</td>
-                            <td>{{ product.price }} kr</td>
-                        </table>
+                        <p>{{ product.name }}</p>
+                        <p>{{ product.price }} kr</p>
                         <p>{{ product.description_short }}</p>
                         <p><a href="{% url 'nablashop:product_detail' product.id %}" class="btn btn-primary center-block"
                               role="button">Les mer</a>
