Endrer på tekst i nabla.no/utveksling etter ønske fra Educom

--- a/exchange/templates/exchange/ex_list.html
+++ b/exchange/templates/exchange/ex_list.html
@@ -6,9 +6,9 @@
     <h2>Utveksling</h2>
     <form method="GET" action="">
         <input type="text" name="q" placeholder="" value="{{request.GET.q}}"/>
-        <input type="submit" value="SÃ¸k"/>
+        <input type="submit" value="Søk"/>
     </form>
-    <p>Her finner du en liste over universiteter hvor fysmattere har vÃ¦rt pÃ¥ utveksling:</p>
+    <p>Her finner du en liste over noen universiteter hvor fysmattere har vært på utveksling (NB: lista er ikke en komplett):</p>
     <div style="overflow: auto">
         <table class="table">
         <thead>
