Legger til link til nabla.no/utveksling i navbar
Under wiki

--- a/templates/base.html
+++ b/templates/base.html
@@ -91,6 +91,7 @@
 
                           <li><a href="{% url "wiki:root" %}">Internwiki</a></li>
                           <li><a href="http://wiki.nabla.no/">Fagwiki</a></li>
+                          <li><a href="{% url "ex_list" %}">Utveksling</a></li>                          
                       </ul>
                       </li>
 
